# ftdi-bitbang

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac.sh  package.ini
debian/: create-deb-arch.sh  pkgconfig.pc.sh
debian/arch/all/DEBIAN/: changelog.sh  control.sh  copyright
man/: Makefile.am  ftdi-bitbang.1  ftdi-hd44780.1
src/: Makefile.am  arg.c  arg.h  cmd-bitbang.c  cmd-common.c  cmd-common.h  cmd-control.c  cmd-hd44780.c  cmd-simple-capture.c  cmd-simple-scope.c  cmd-spi.c  ftdi-bb.c  ftdi-bitbang-cmd.c  ftdi-bitbang.c  ftdi-bitbang.h  ftdi-cfg.c  ftdi-hd44780.c  ftdi-hd44780.h  ftdi-spi.c  ftdi-spi.h  ftdic.c  ftdic.h  linkedlist.h  main.c  opt-all.h  opt.c  opt.h  os.c  os.h  x.c  x.h
v1-backup/: autogen.sh
v1-backup/debian/: pkgconfig.pc.sh
v1-backup/src/: cmd-bitbang.c  cmd-control.c  cmd-prg-pic.c  cmd-simple-capture.c  cmd-simple-scope.c  cmd-spi.c  ftdi-hd44780.c  ftdi-spi.c  ftdi-spi.h
